fixed whitespace at bottom of content due to scroll shrink toolbar

--- a/public/stylesheets/less/style.less
+++ b/public/stylesheets/less/style.less
@@ -495,8 +495,12 @@ md-toolbar.md-default-theme {
 	margin-top: -21px !important;
 	z-index: 1;
 }
+
 .rp-content {
 	z-index: 0;
+	transform: translate3d(0px, 0px, 0px) !important;
+	-webkit-transform: translate3d(0px, 0px, 0px) !important;
+	margin-top: -50px !important;
 }
 
 .rp-tabs{
